--- a/All Project Code & Components/src/views/pages/home.ejs
+++ b/All Project Code & Components/src/views/pages/home.ejs
@@ -1,9 +1,11 @@
 <%- include ('../partials/head') %>
+    <%- include ('../partials/menu') %>
 
-    <main>
-        <div class="container">
-            <h3>Hello World</h3>
-        </div>
-    </main>
+        <main>
+            <div class="col"><%- include ('../partials/message') %></div>
+            <div class="container">
+                <h3>Hello World</h3>
+            </div>
+        </main>
 
-    <%- include ('../partials/footer') %>
+        <%- include ('../partials/footer') %>
