login auth added. Register and login routes changed slightly

--- a/All Project Code & Components/src/views/pages/register.ejs
+++ b/All Project Code & Components/src/views/pages/register.ejs
@@ -17,8 +17,8 @@
                     <label class="form-label" for="password">Password</label>
                     <input id="password" class="form-control" name="password" class="input" type="password" />
                     <hr class="solid" style="border-top: 2px solid #bbb;">
-                    <label class="form-label" for="spotify">Spotify Username</label>
-                    <input id="spotify" class="form-control" name="spotify" class="input" type="text" />
+                    <label class="form-label" for="spotify">Spotify User ID</label>
+                    <input id="spotifyUserID" class="form-control" name="spotifyUserID" class="input" type="text" />
                     <label class="control-label" for="button" style="float: left;">Already have an account? <a
                             href="/login">Login</a></label>
                     <button id="button" class="btn btn-primary" type="submit" style="float: right;">Register</button>
