updated nav-bar with home, login, and register pages

--- a/All Project Code & Components/src/views/partials/menu.ejs
+++ b/All Project Code & Components/src/views/partials/menu.ejs
@@ -10,6 +10,10 @@
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <!-- TODO: Add all pages -->
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/login">Login</a></li>
+                        <li><a href="/register">Register</a></li>
+                        <!-- <li><a href="/profile">Profile</a></li> -->
                     </li>
                 </ul>
                 <div class="nav-item me-1">
