--- a/All Project Code & Components/src/views/pages/register.ejs
+++ b/All Project Code & Components/src/views/pages/register.ejs
@@ -5,24 +5,48 @@
             <div class="col"><%- include ('../partials/message') %></div>
             <div class="container">
                 <!-- THE REST OF YOUR HTML CODE GOES HERE -->
-                <form action="/register" method="POST"
-                    style="display: block; width: 50%; margin: 0 auto; padding-top: 10px;">
-                    <h2>
-                        <centre>Register</centre>
-                    </h2>
-                    <label class="form-label" for="username">Username</label>
-                    <input id="username" class="form-control" name="username" class="input" type="text" />
-                    <label class="form-label" for="email">Email Address</label>
-                    <input id="email" class="form-control" name="email" class="input" type="email" />
-                    <label class="form-label" for="password">Password</label>
-                    <input id="password" class="form-control" name="password" class="input" type="password" />
-                    <hr class="solid" style="border-top: 2px solid #bbb;">
-                    <label class="form-label" for="spotify">Spotify User ID</label>
-                    <input id="spotifyUserID" class="form-control" name="spotifyUserID" class="input" type="text" />
-                    <label class="control-label" for="button" style="float: left;">Already have an account? <a
-                            href="/login">Login</a></label>
-                    <button id="button" class="btn btn-primary" type="submit" style="float: right;">Register</button>
-                </form>
+            <form action="/register" method="POST" style="display: block; width: 50%; margin: 0 auto; padding-top: 10px;">
+                <h2>
+                    <centre>New User Register</centre>
+                </h2>
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="FormControlInput1" placeholder="name@example.com">
+              </div>
+        
+              <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">User Name</label>
+                <input type="text" class="form-control" id="FormControlInput2" placeholder="create your user name">
+              </div>
+        
+        
+              <div class="mb-3">
+                <label for="inputPassword5" class="form-label">Password</label>
+                <input type="password" id="inputPassword3" class="form-control" aria-describedby="passwordHelpBlock">
+                <div id="passwordHelpBlock" class="form-text">
+                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+                </div>
+            </div>
+        
+            <div class="mb-3">
+                <label for="inputPassword5" class="form-label">Confirm Password</label>
+                <input type="password" id="inputPassword4" class="form-control">
+            </div>
+        
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Spotify User ID</label>
+                <input type="number" class="form-control" id="FormControlInput3">
+              </div>
+              <div>
+              <label class="control-label" for="button" style="float: left;">Already have an account? <a
+                href="/login">Login</a>
+              </label>
+            </div>
+            <br>
+              <div class="col-12">
+                <button class="btn btn-primary" type="submit">Register Now!</button>
+              </div>
+              </form>
             </div>
         </main>
 
