--- a/All Project Code & Components/src/views/partials/menu.ejs
+++ b/All Project Code & Components/src/views/partials/menu.ejs
@@ -8,16 +8,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <!-- TODO: Add all pages -->
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/login">Login</a></li>
-                        <li><a href="/register">Register</a></li>
-                        <!-- <li><a href="/profile">Profile</a></li> -->
-                    </li>
+                    <li><a class="nav-link" href="/">Home</a></li>
+                    <li><a class="nav-link" href="/login">Login</a></li>
+                    <li><a class="nav-link" href="/register">Register</a></li>
+                    <li><a class="nav-link" href="/profile">Profile</a></li>
                 </ul>
                 <div class="nav-item me-1">
-                    <a class="nav-link" href="/logout" style="color: gray; text-decoration: none;">Logout</a>
+                    <a class="nav-link" href="/logout">Logout</a>
                 </div>
             </div>
         </div>
