--- a/All Project Code & Components/src/resources/css/style.css
+++ b/All Project Code & Components/src/resources/css/style.css
@@ -1,4 +1,28 @@
-/* Add your CSS styles here */
-body {
-    /* Your styles here */
+header {
+    background-color: #333;
+    color: white;
+    padding: 10px;
+}
+
+.navbar {
+    background-color: #444;
+}
+
+.navbar a {
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+}
+
+.navbar a:hover {
+    color: #ffd700;
+}
+
+.navbar .nav-item a {
+    color: gray;
+    text-decoration: none;
+}
+
+.navbar .nav-item a:hover {
+    color: #555;
 }
