--- a/All Project Code & Components/src/views/partials/menu.ejs
+++ b/All Project Code & Components/src/views/partials/menu.ejs
@@ -12,6 +12,7 @@
                     <li><a class="nav-link" href="/login">Login</a></li>
                     <li><a class="nav-link" href="/register">Register</a></li>
                     <li><a class="nav-link" href="/profile">Profile</a></li>
+                    <li><a class="nav-link" href="/create_post">New Post</a></li>
                 </ul>
                 <div class="nav-item me-1">
                     <a class="nav-link" href="/logout">Logout</a>
