--- a/All Project Code & Components/src/views/partials/menu.ejs
+++ b/All Project Code & Components/src/views/partials/menu.ejs
@@ -11,6 +11,7 @@
                     <li><a class="nav-link" href="/">Home</a></li>
                     <li><a class="nav-link" href="/profile">Profile</a></li>
                     <li><a class="nav-link" href="/create_post">New Post</a></li>
+                    <li><a class="nav-link" href="/search">Search</a></li>
                 </ul>
                 <div class="nav-item me-1">
                     <a class="nav-link" href="/logout">Logout</a>
