--- a/All Project Code & Components/src/views/pages/search.ejs
+++ b/All Project Code & Components/src/views/pages/search.ejs
@@ -1,19 +1,41 @@
 <!-- FILEPATH: /Users/owen/Documents/CSCI 3308/CSCI3308_16-07/All Project Code & Components/src/views/pages/search.ejs -->
         <%- include ('../partials/head') %>
         <%- include('../partials/menu') %>
-        <main>
-            <!-- Create a search form that allows users to search for a specific username -->
+
+        <div class="container">
+            <h1>Search Users</h1>
             <form action="/search" method="GET">
-                <input type="text" name="username" placeholder="Search for a username...">
-                <button type="submit">Search</button>
+                <div class="form-group">
+                    <label for="username">Username:</label>
+                    <input type="text" class="form-control" id="username" name="username" placeholder="Enter username">
+                </div>
+                <button type="submit" class="btn btn-primary">Search</button>
             </form>
 
-            <!-- Display the search results -->
-            <h1>Search Results</h1>
-            <ul>
-                <% users.forEach(function(user) { %>
-                    <li><%= user.username %></li>
-                <% }); %>
-            </ul>
-        </main>
+            <% if (users.length > 0) { %>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Username</th>
+                            <th>Email</th>
+                            <th>First Name</th>
+                            <th>Last Name</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% users.forEach(function(user) { %>
+                            <tr>
+                                <td><%= user.username %></td>
+                                <td><%= user.email %></td>
+                                <td><%= user.firstName %></td>
+                                <td><%= user.lastName %></td>
+                            </tr>
+                        <% }); %>
+                    </tbody>
+                </table>
+            <% } else if (searched) { %>
+                <p>No users found.</p>
+            <% } %>
+        </div>
+
         <%- include('../partials/footer') %>
