fixed profile image update from spotify

--- a/All Project Code & Components/src/views/pages/profile.ejs
+++ b/All Project Code & Components/src/views/pages/profile.ejs
@@ -8,7 +8,8 @@
         <div class="row align-items-center"
           style="padding-top: 2rem; padding-left: 4rem; padding-right: 4rem; width: fit-content">
           <div class="col-2">
-            <img src="<%= user.profile_picture %>" alt="profile picture" style="width: 100%; height: auto;">
+            <img src="<%= user.profile_picture %>" alt="profile picture"
+              style="width: 100%; height: auto; border-radius: 50%;">
           </div>
           <div class="col">
             <h1>
