--- a/All Project Code & Components/src/views/pages/home.ejs
+++ b/All Project Code & Components/src/views/pages/home.ejs
@@ -12,14 +12,14 @@
                                     style="max-width: 600px; width: 100%; height: 750px; border-radius: 0px;">
                                     <div class="card-header">
                                         <div class="row d-flex align-items-center">
-                                            <div class="col-2">
-                                                <img src="https://surgassociates.com/wp-content/uploads/610-6104451_image-placeholder-png-user-profile-placeholder-image-png.jpg"
+                                            <div class="col-auto">
+                                                <img src="<%= post.profile_picture %>"
                                                     style="width: 50px; height: 50px; border-radius: 50%;">
                                             </div>
-                                            <div class="col-10">
+                                            <div class="col-auto">
                                                 <a href=""
                                                     style="color: black; text-decoration: none; font-weight: bold;">
-                                                    Username
+                                                    <%= post.username %>
                                                 </a>
                                             </div>
                                         </div>
