--- a/All Project Code & Components/src/views/pages/register.ejs
+++ b/All Project Code & Components/src/views/pages/register.ejs
@@ -9,18 +9,18 @@
           <centre>Register New Account</centre>
         </h2>
         <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Email address</label>
+          <label for="email" class="form-label">Email address</label>
           <input type="email" class="form-control input" name="email" placeholder="name@example.com">
         </div>
 
         <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">User Name</label>
+          <label for="username" class="form-label">User Name</label>
           <input type="text" class="form-control input" name="username" placeholder="create your user name">
         </div>
 
 
         <div class="mb-3">
-          <label for="inputPassword5" class="form-label">Password</label>
+          <label for="password1" class="form-label">Password</label>
           <input type="password" name="password1" class="form-control input" aria-describedby="passwordHelpBlock">
           <div id="passwordHelpBlock" class="form-text">
             Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces,
@@ -29,9 +29,11 @@
         </div>
 
         <div class="mb-3">
-          <label for="inputPassword5" class="form-label">Confirm Password</label>
+          <label for="password2" class="form-label">Confirm Password</label>
           <input type="password" name="password2" class="form-control input">
         </div>
+
+        <hr class="solid" style="border-top: 2px solid #bbb;">
 
         <div>
           <label class="control-label" for="button" style="float: left;">Already have an account? <a
