--- a/All Project Code & Components/src/views/pages/search.ejs
+++ b/All Project Code & Components/src/views/pages/search.ejs
@@ -23,6 +23,7 @@
                         <% users.forEach(function(user) { %>
                             <tr>
                                 <td><%= user.username %></td>
+                                <td><a href="/users/<%= user.username %>">View</a></td>
                             </tr>
                         <% }); %>
                     </tbody>
