--- a/All Project Code & Components/src/views/pages/profile.ejs
+++ b/All Project Code & Components/src/views/pages/profile.ejs
@@ -3,92 +3,115 @@
 
     <main>
       <div class="col"><%- include ('../partials/message') %></div>
-      <div class="container"
-        style="display: block; width: 70%; height: 100vh; padding-top: 2rem; background-color: rgb(255, 255, 255); box-shadow: 0px 10px 20px rgba(0,0,0,0.2);">
-        <div class="row align-items-center"
-          style="padding-top: 2rem; padding-left: 4rem; padding-right: 4rem; width: fit-content">
-          <div class="col-2">
-            <img src="<%= user.profile_picture %>" alt="profile picture"
-              style="width: 100%; height: auto; border-radius: 50%;">
-          </div>
-          <div class="col">
-            <h1>
-              <%= user.username %>
-            </h1>
-          </div>
-          <div class="col">
-            <h2>
-              Followers: <%= user.followers %>
-            </h2>
-          </div>
-          <div class="col">
-            <h2>
-              Following: <%= user.following %>
-            </h2>
-          </div>
-          <p>
-            <%= user.bio %>
-          </p>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-6 d-flex flex-column align-items-center">
-              <h1>
-                Top Songs
-              </h1>
-              <div class="container d-flex flex-column align-items-center">
-                <% topTracks.items.forEach(function(song) { %>
-                  <div class=" card" style="width: 18rem; border-radius: 0px;">
-                    <div class="card-body d-flex">
-                      <img src="<%= song.album.images[0].url %>" alt="Album cover"
-                        style="width: 100px; height: 100px; margin-right: 20px;">
-                      <div>
-                        <h5 class="card-title">
-                          <%= song.name %>
-                        </h5>
-                        <h6 class="card-subtitle mb-2 text-muted">
-                          <%= song.artists[0].name %>
-                        </h6>
-                        <p class="card-text">Popularity: <%= song.popularity %>
-                        </p>
-
+      <div class="container mt-4" style="margin-bottom: 96px;">
+        <div class="row">
+          <div class="col-12">
+            <div class="container" style="max-width: 900px; width: 100%; height: fit-content; padding: 0px;">
+              <!-- Profile Heading -->
+              <div class="col" style="border-color: black; border-width: 1px; border-style: solid; padding:
+                24px; box-shadow: 6px 6px 0px 0px rgba(0, 0, 0);">
+                <div class="d-flex align-items-center">
+                  <img src="<%= user.profile_picture %>" alt="profile picture"
+                    style="width: 80px; height: auto; border-radius: 50%;">
+                  <h1
+                    style="font-size: 40px; font-style: normal; font-weight: 700; line-height: normal; margin: 0px; padding: 0px; padding-left: 20px;">
+                    <%= user.username %>
+                  </h1>
+                  <h2
+                    style="font-size: 20px; font-style: normal; font-weight: 600; line-height: normal; margin: 0px; padding: 0px; padding-left: 40px; padding-top: 8px;">
+                    Followers: <%= user.followers %>
+                  </h2>
+                  <h2
+                    style="font-size: 20px; font-style: normal; font-weight: 600; line-height: normal; margin: 0px; padding: 0px; padding-left: 40px; padding-top: 8px;">
+                    Following: <%= user.following %>
+                  </h2>
+                </div>
+                <div style="width: 50%">
+                  <p
+                    style="font-size: 14px; font-style: normal; font-weight: 400; line-height: normal; margin: 0px; padding: 0px; padding-top: 20px;">
+                    <%= user.bio %>
+                  </p>
+                </div>
+              </div>
+              <!-- Profile Info -->
+              <div class="row" style="margin-top: 32px;">
+                <!-- Top Songs -->
+                <div class="col-6 d-flex flex-column align-items-center">
+                  <h1
+                    style="font-size: 40px; font-style: normal; font-weight: 600; line-height: normal; margin: 0px; padding: 0px;">
+                    Top Songs</h1>
+                  <% topTracks.items.forEach(function(song) { %>
+                    <div class="col" style="width: 90%; border-color: black; border-width: 1px; border-style: solid; padding:
+                    16px; box-shadow: 6px 6px 0px 0px rgba(0, 0, 0); margin-top: 24px;">
+                      <div class="d-flex align-items-center justify-content-between">
+                        <div class="d-flex align-items-center">
+                          <img src="<%= song.album.images[0].url %>" alt="Album cover"
+                            style="width: 80px; height: auto;">
+                          <div style="padding-left: 20px;">
+                            <h1
+                              style="font-size: 20px; font-style: normal; font-weight: 600; line-height: normal; margin: 0px; padding: 0px;">
+                              <%= song.name %>
+                            </h1>
+                            <h2
+                              style="font-size: 14px; font-style: normal; font-weight: 400; line-height: normal; margin: 0px; padding: 0px; margin-top: 8px;">
+                              <%= song.artists[0].name %>
+                            </h2>
+                          </div>
+                        </div>
+                        <div class="d-flex align-items-center" style="width: 60px; height: 60px;">
+                          <button onclick="window.location.href='<%= song.external_urls.spotify %>'"
+                            style="width: 40px; height: 40px; padding: 0; display: flex; justify-content: center; align-items: center; border: none; background: none;">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="black"
+                              class="bi bi-play-fill" viewBox="0 0 16 16"
+                              style="z-index: 1; transform: translateX(1px);">
+                              <path
+                                d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z" />
+                            </svg>
+                          </button>
+                        </div>
                       </div>
                     </div>
-                    <div class="card-footer">
-                      <a href="<%= song.href %>" class="card-link">Listen on Spotify</a>
-                      <a href="<%= song.preview_url %>" class="card-link">Preview</a>
+                    <% }); %>
+                </div>
+                <!-- Top Artists -->
+                <div class="col-6 d-flex flex-column align-items-center">
+                  <h1
+                    style="font-size: 40px; font-style: normal; font-weight: 600; line-height: normal; margin: 0px; padding: 0px;">
+                    Top Artists</h1>
+                  <% topArtists.items.forEach(function(artist) { %>
+                    <div class="col" style="width: 90%; border-color: black; border-width: 1px; border-style: solid; padding:
+                      16px; box-shadow: 6px 6px 0px 0px rgba(0, 0, 0); margin-top: 24px;">
+                      <div class="d-flex align-items-center justify-content-between">
+                        <div class="d-flex align-items-center">
+                          <img src="<%= artist.images[0].url %>" alt="Album cover" style="width: 80px; height: auto;">
+                          <div style="padding-left: 20px;">
+                            <h1
+                              style="font-size: 20px; font-style: normal; font-weight: 600; line-height: normal; margin: 0px; padding: 0px;">
+                              <%= artist.name %>
+                            </h1>
+                            <h2
+                              style="font-size: 14px; font-style: normal; font-weight: 400; line-height: normal; margin: 0px; padding: 0px; margin-top: 8px;">
+                              <%= artist.genres.join(', ') %>
+                            </h2>
+                          </div>
+                        </div>
+                        <div class="d-flex align-items-center" style="width: 60px; height: 60px;">
+                          <button onclick="window.location.href=' <%=artist.external_urls.spotify %>'"
+                                style="width: 40px; height: 40px; padding: 0; display: flex; justify-content: center;
+                                align-items: center; border: none; background: none;">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="black"
+                                  class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                                  <path fill-rule="evenodd"
+                                    d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z" />
+                                </svg>
+                                </button>
+                          </div>
+                        </div>
+                      </div>
+                      <% }); %>
                     </div>
-                  </div>
-                  <% }); %>
+                </div>
               </div>
-
-            </div>
-            <div class="col-6 d-flex flex-column align-items-center">
-              <h1>
-                Top Artists
-              </h1>
-              <div class="container d-flex flex-column align-items-center">
-                <% topArtists.items.forEach(function(artist) { %>
-                  <div class="card" style="width: 18rem; border-radius: 0px;">
-                    <div class="card-body d-flex">
-                      <img src="<%= artist.images[0].url %>" alt="Artist picture"
-                        style="width: 100px; height: 100px; margin-right: 20px;">
-                      <div>
-                        <h5 class="card-title">
-                          <%= artist.name %>
-                        </h5>
-                        <p class="card-text">Popularity: <%= artist.popularity %>
-                        </p>
-                        <p class="card-text">Genres: <%= artist.genres.join(', ') %></p>
-                            </div>
-                        </div>
-                        <div class="card-footer">
-                            <a href="<%= artist.external_urls.spotify %>" class="card-link">Listen on Spotify</a>
-                            <a href="<%= artist.href %>" class="card-link">Artist Profile</a>
-                        </div>
-                    </div>
-                <% }); %>
-            </div>
             </div>
           </div>
         </div>
@@ -96,4 +119,4 @@
 
     </main>
 
-    <%- include ('../partials/footer') %>
+    <%- include(`../partials/footer`) %>
